// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutation updateUserAlerts should create user alerts when does not exist 1`] = `
Object {
  "updateUserAlerts": Object {
    "filter": false,
    "rankLastSeen": null,
  },
}
`;

exports[`mutation updateUserAlerts should update alerts of user 1`] = `
Object {
  "updateUserAlerts": Object {
    "filter": false,
    "rankLastSeen": "2020-09-22T12:15:51.247Z",
  },
}
`;
